--- a/build.gradle
+++ b/build.gradle
@@ -35,8 +35,8 @@ allprojects {
 
     idea {
         module {
-            downloadSources = false
-            downloadJavadoc = false
+            downloadSources = true
+            downloadJavadoc = true
             jdkName = "1.7"
         }
     }
@@ -45,8 +45,8 @@ allprojects {
 
 subprojects {
     apply plugin: 'java'
-    apply plugin: 'checkstyle'
-    apply plugin: 'findbugs'
+//    apply plugin: 'checkstyle'
+//    apply plugin: 'findbugs'
     apply plugin: 'aspectj'
     apply plugin: 'project-report'
     apply from: rootProject.file("gradle/tasks.gradle")
@@ -69,6 +69,7 @@ subprojects {
         maven { url "http://developer.jasig.org/repo/content/groups/m2-legacy/" }
         maven { url "https://build.shibboleth.net/nexus/content/groups/public" }
         maven { url "http://files.couchbase.com/maven2" }
+        maven { url "https://mvnrepository.com/repos/springio-plugins-release"}
     }
 
     test {
@@ -129,41 +130,41 @@ subprojects {
         }
     }
 
-    checkstyle {
-        configFile new File(rootDir, "checkstyle-rules.xml")
-        configProperties = ["checkstyle.suppressions.file": new File(rootDir, "checkstyle-suppressions.xml")]
-        ignoreFailures false
-        showViolations true
-        toolVersion "${checkstyleVersion}"
-    }
+//    checkstyle {
+//        configFile new File(rootDir, "checkstyle-rules.xml")
+//        configProperties = ["checkstyle.suppressions.file": new File(rootDir, "checkstyle-suppressions.xml")]
+//        ignoreFailures false
+//        showViolations true
+//        toolVersion "${checkstyleVersion}"
+//    }
+//
+//    checkstyleTest {
+//        enabled = !Boolean.getBoolean("skipCheckstyle")
+//    }
+//
+//    checkstyleMain {
+//        enabled = !Boolean.getBoolean("skipCheckstyle")
+//    }
 
-    checkstyleTest {
-        enabled = !Boolean.getBoolean("skipCheckstyle")
-    }
+//    findbugs {
+//        toolVersion = "${findbugsVersion}"
+//        sourceSets = [sourceSets.main]
+//        ignoreFailures = true
+//        reportsDir = file("$project.buildDir/findbugsReports")
+//        effort = "max"
+//        reportLevel = "high"
+//        visitors = ["FindSqlInjection", "SwitchFallthrough"]
+//        omitVisitors = ["FindNonShortCircuit"]
+//        includeFilter = file("$rootProject.projectDir/findbugs-rules.xml")
+//    }
 
-    checkstyleMain {
-        enabled = !Boolean.getBoolean("skipCheckstyle")
-    }
-
-    findbugs {
-        toolVersion = "${findbugsVersion}"
-        sourceSets = [sourceSets.main]
-        ignoreFailures = true
-        reportsDir = file("$project.buildDir/findbugsReports")
-        effort = "max"
-        reportLevel = "high"
-        visitors = ["FindSqlInjection", "SwitchFallthrough"]
-        omitVisitors = ["FindNonShortCircuit"]
-        includeFilter = file("$rootProject.projectDir/findbugs-rules.xml")
-    }
-
-    findbugsMain {
-        enabled = !Boolean.getBoolean("skipFindbugs")
-    }
-
-    findbugsTest {
-        enabled = !Boolean.getBoolean("skipFindbugs")
-    }
+//    findbugsMain {
+//        enabled = !Boolean.getBoolean("skipFindbugs")
+//    }
+//
+//    findbugsTest {
+//        enabled = !Boolean.getBoolean("skipFindbugs")
+//    }
 
     dependencies {
         compile group: 'org.aspectj', name: 'aspectjrt', version: aspectjVersion
@@ -171,12 +172,12 @@ subprojects {
         compile group: 'javax.validation', name: 'validation-api', version: javaxValidationVersion
         compile group: 'org.slf4j', name: 'slf4j-api', version: slf4jVersion
         
-        if (!Boolean.getBoolean("skipFindbugs")) {
-            findbugs group: 'com.google.code.findbugs', name: 'findbugs', version: findbugsVersion
-            findbugs configurations.findbugsPlugins.dependencies
-            findbugsPlugins group: 'com.mebigfatguy.fb-contrib', name: 'fb-contrib', version: findbugsContribVersion
-            findbugsPlugins group: 'com.h3xstream.findsecbugs', name: 'findsecbugs-plugin', version: findbugsSecVersion
-        }
+//        if (!Boolean.getBoolean("skipFindbugs")) {
+//            findbugs group: 'com.google.code.findbugs', name: 'findbugs', version: findbugsVersion
+//            findbugs configurations.findbugsPlugins.dependencies
+//            findbugsPlugins group: 'com.mebigfatguy.fb-contrib', name: 'fb-contrib', version: findbugsContribVersion
+//            findbugsPlugins group: 'com.h3xstream.findsecbugs', name: 'findsecbugs-plugin', version: findbugsSecVersion
+//        }
 
         runtime(group: 'org.glassfish.web', name: 'javax.el', version: javaxElImplVersion) {
             exclude(group: 'javax.el', module: 'javax.el-api')
