--- a/build.gradle
+++ b/build.gradle
@@ -13,6 +13,7 @@ ext {
 
 buildscript {
     repositories {
+        maven {url "http://archiva.devcenter1.kck.ru:8081/nexus/content/groups/public"}
         mavenLocal()
         jcenter()
         maven {
@@ -59,6 +60,7 @@ subprojects {
 
     
     repositories {
+        maven {url "http://archiva.devcenter1.kck.ru:8081/nexus/content/groups/public"}
         mavenLocal()
         mavenCentral()
         jcenter()
@@ -70,6 +72,7 @@ subprojects {
         maven { url "https://build.shibboleth.net/nexus/content/groups/public" }
         maven { url "http://files.couchbase.com/maven2" }
         maven { url "https://mvnrepository.com/repos/springio-plugins-release"}
+
     }
 
     test {
